HACK: Prevent ellipsis in open column;
The width of the column got too narrow after adding the clipboard icon.
The column width should be expanded instead of overriding the overflow
CSS attribute, but as the overflow change works reasonably well, better
to do that now and implement a proper fix later.

--- a/packages/front/src/Tracks.css
+++ b/packages/front/src/Tracks.css
@@ -128,6 +128,7 @@
   .open-cell {
     width: 40%;
     text-align: center;
+    overflow: visible;
   }
 
   .search-cell {
